# attractor

./: .gitignore  README.md  pyproject.toml
.amplifier/: AGENTS.md
docs/: nl-spec-format-guide.md
examples/: code_review.dot  codebase_to_spec.dot  compound_conditions.dot  conditional_goal_gate.dot  e2e_test.py  edge_weights.dot  fibonacci.dot  first_success.dot  human_approval.dot  model_stylesheet.dot  multi_model_nodes.dot  parallel_approaches.dot  prompt_layering.dot  research_then_build.dot  retry_policy.dot  software_factory.dot  spec_driven_dev.dot  supervisor_child.dot  supervisor_loop.dot  tool_node.dot  variable_expansion.dot
recipes/: spec-compliance-audit.yaml  wave-implementation.yaml
tests/: __init__.py  conftest.py  live_helpers.py  test_agent_loop.py  test_aggressive.py  test_audit2_wave1_foundation.py  test_audit2_wave2_streaming.py  test_audit2_wave3_structured_output.py  test_audit2_wave4_agent_layer.py  test_audit2_wave5_pipeline_hardening.py  test_audit2_wave6_live_parity_matrix.py  test_audit3_final_gaps.py  test_audit4_gaps.py  test_coverage_gaps_live.py  test_coverage_gaps_mock.py  test_dod_gaps.py  test_e2e_integration.py  test_e2e_integration_parity.py  test_events.py  test_live_comprehensive.py  test_live_wave9_10_p1.py  test_llm_catalog_streaming.py  test_llm_errors_retry.py  test_llm_types.py  test_loop_detector_validation.py  test_manager_middleware.py  test_medium_fixes.py  test_new_features.py  test_parallel.py  test_partial_items_fixes.py  test_pipeline.py  test_pipeline_engine.py  test_preamble.py  test_profiles.py  test_server.py  (+23 more)
(+61 files in other folders)
